강아지 리스트 추가

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>cat&dog</h1>
     <p>강아지를 키우진 않지만 좋아해</p>
     <p>메인 메뉴</p>
+    <ul>
+        <li>웰시코기</li>
+        <li>비글</li>
+    </ul>
 </body>
 </html>
